fixed icon alignment issues and missing icon

--- a/extensions-web/ClientApp/src/custom.css
+++ b/extensions-web/ClientApp/src/custom.css
@@ -16,3 +16,5 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+svg { vertical-align: baseline; }
